paid/force-app/main/default/objects/Paid_Credit_Note_Line__c/fields/Paid_Calculate_Tax__c.field-meta.xml
<CustomField>
    <fullName>Paid_Calculate_Tax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid Calculate Tax?</label>
    <type>Checkbox</type>
</CustomField>