paid/force-app/main/default/objects/Paid_Credit_Note_Line__c/fields/Paid_Credit_Note_Line_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Credit_Note_Line_Date__c</fullName>
    <label>Paid Credit Note Line Date</label>
    <type>Date</type>
</CustomField>