paid/force-app/main/default/objects/Paid_Credit_Note_Line__c/fields/Paid_Revenue_Most_Likely_Amount__c.field-meta.xml
<CustomField>
    <fullName>Paid_Revenue_Most_Likely_Amount__c</fullName>
    <label>Paid Revenue Most Likely Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>