paid/force-app/main/default/objects/Paid_Credit_Note_Line__c/fields/Paid_Revenue_Schedule_Status__c.field-meta.xml
<CustomField>
    <fullName>Paid_Revenue_Schedule_Status__c</fullName>
    <label>Paid Revenue Schedule Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>