paid/force-app/main/default/objects/Paid_Credit_Note_Line__c/fields/Paid_Tax__c.field-meta.xml
<CustomField>
    <fullName>Paid_Tax__c</fullName>
    <label>Paid Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>