paid/force-app/main/default/objects/Paid_Credit_Note_Line__c/fields/Paid_Tax_City__c.field-meta.xml
<CustomField>
    <fullName>Paid_Tax_City__c</fullName>
    <label>Paid Tax City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>