paid/force-app/main/default/objects/Paid_Credit_Note_Line__c/fields/Paid_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Paid_Tax_Code__c</fullName>
    <label>Paid Tax Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>