paid/force-app/main/default/objects/Paid_Credit_Note_Line__c/fields/Paid_Tax_Street_2__c.field-meta.xml
<CustomField>
    <fullName>Paid_Tax_Street_2__c</fullName>
    <label>Paid Tax Street 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>