paid/force-app/main/default/objects/Paid_Credit_Note_Line__c/fields/Paid_Tax_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Paid_Tax_Zip_Code__c</fullName>
    <label>Paid Tax Zip Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>